--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <li><a href="https://github.com/Hey50Joy/Simple-calculator-1">Simple Calculator V.1</a> - My firs attempt at arithmetic logic using Python basics.</li>
         <li><a href="https://github.com/Hey50Joy/Simple_Calculator_2">Simple Calculator V.2</a> - Cleaner, more efficient version of my original calculator.</li>
         <li><a href="https://github.com/Hey50Joy/Quite-plan-calculator">Quite Plan Calculator App</a> - Simple budgeting tool using a 5-input formula</li>
-        <li><a href="https://github.com/Hey50Joy/Magic-8-Ball-1">Magic 8-Ball V.1</a>A Fun python toy that randomly answers your yes/ no questions.</li>
-        <li><a href="https://github.com/Hey50Joy/Magic-8-Ball-2">Magic 8-Ball V.2</a>Version 2 with improved structure and replay funtionality.</li>
+        <li><a href="https://github.com/Hey50Joy/Magic-8-Ball-1">Magic 8-Ball V.1</a> - A Fun python toy that randomly answers your yes/ no questions.</li>
+        <li><a href="https://github.com/Hey50Joy/Magic-8-Ball-2">Magic 8-Ball V.2</a> - Version 2 with improved structure and replay funtionality.</li>
       </ul>
     </section>
 
@@ -36,7 +36,7 @@
 
         <!-- Project 1 -->
         <details >
-          <summary>Simple Calculator V.2</summary>
+          <summary>Simple Calculator V.1</summary>
             <p>This beginnier-friendly calculator project performs a series of chained mathematical operations using five user inputs. It first adds the first two numbers, subracts the third, multiplies by the fourth, and divides by the fifth - then prints out each stage of the result, including a cheeky easter egg if the final result exceeds 100.</p>
             <p>Built using Python's "try-except" structure to catch input errors, this project taught me the importance of input validation and chaining logic for more complex outcomes. It's simple but mighty - think of it as the first rep at the mental gym.</p>
             <p>Techmologies used: Python, CLI, Exception Handling.</p>
