--- a/index.html
+++ b/index.html
@@ -2,21 +2,41 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="with=device-with, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Joy | Future Software Dev</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   </head>
   <body>
+
+    <!-- HEADER -->
     <header>
-      <h1>Hi, I'm Joy</h1>
-      <p>Lawyer turned future sofware dev. Building my dream, one line of code at a time.</p>
+      <h1 class="logo">Joy</h1>
+      <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </header>
 
-    <section>
-      <h2>My Mission</h2>
-      <p>I'm on a jourrney to shift from litigation to creation. From courtrooms to code-welcome to the transformation.</p>
+    <!-- HERO SECTION -->
+    <section class="hero">
+        <h2>Hi, I'm Joy</h2>
+        <p>From litigation to creation - Welcome to my evolution from courtroom to code</p>
     </section>
 
+    <!-- MISSION -->
+    <section>
+        <h2>My Mission</h2>
+        <p>I'm on a journey to shift from legal briefs to code blocks from litigation to creation - learning, building, and redefining what success looks like.</p>
+        <P> Welcome to my transformation!</P> 
+    </section>
+    
     <section>
       <h2>Projects overview</h2>
       <ul>
@@ -28,64 +48,12 @@
       </ul>
     </section>
 
-    <section>
-      <h2>Projects Details</h2>
-
-      <!-- Accordion Container -->
-      <div>
-
-        <!-- Project 1 -->
-        <details >
-          <summary>Simple Calculator V.1</summary>
-            <p>This beginnier-friendly calculator project performs a series of chained mathematical operations using five user inputs. It first adds the first two numbers, subracts the third, multiplies by the fourth, and divides by the fifth - then prints out each stage of the result, including a cheeky easter egg if the final result exceeds 100.</p>
-            <p>Built using Python's "try-except" structure to catch input errors, this project taught me the importance of input validation and chaining logic for more complex outcomes. It's simple but mighty - think of it as the first rep at the mental gym.</p>
-            <p>Techmologies used: Python, CLI, Exception Handling.</p>
-        </details>
-        
-        <!-- Project 2 -->
-        <details>
-          <summary>Simple Calculator V.2</summary>
-            <p>This project builds upon the first calculator with a more refined understanding of sequential logic flow and Python syntax. The structure mirrors the first version, but this iteration reinforced clean, consistent code habits and focused on improving the readability and maintainability of the logic.</p>
-            <p>Though similar on the surface, this version helped me cement the routine of writing, testing, debugging, and documenting my code more effectively."</p>
-            <p>Technologies used: Python, CLI, Error Handeling.</p>
-        </details>
-
-        <!-- Project 3 -->
-        <details>
-          <summary>Quite Plan Calculator App</summary>
-            <p>This calculator takes the familiar five-input formula and frames it in a more goal-driven context-my personal quit plan. It subtly shifts focus from generic arithmetic to applying logic in personal transformation. It runs the same add - subract - multiply - divide sequence but does so with an emotioanl hook: turning self-discipline into code.</p>
-            <p>Through this project, I practiced blending logic with lifestyle, laying the groundwork for more personalised, user-centric applications in future development.</p>
-            <p>Technologies used: Python, CLI, Input Error Handling.</p>
-        </details>
-
-        <!-- Project 4 -->
-        <details>
-          <summary>Magic 8-Ball V.1</summary>
-            <p>This project reimagines the playful concept of a Magic 8-Ball using mathematical operations and user input. Instead of randomized responses, it creates a deterministic "fortune" based on the user's chosen numbers. The result not only offers a final number but also includes a humorous celebratory message if the answer is larger than 100 - adding a layer of interactivity and charm.</p>
-            <p>It helped me merge basic logic with gamification principles to keep users engaged.</p>
-            <p>Technologies used: Python, User Input, Simple Logic, CLI Interaction.</p>
-        </details>
-
-        <!-- Project 5 -->
-        <details>
-          <summary>Magic 8-Ball V.2</summary>
-            <p>This follow-up version takes the same logic structure and fine-tunes it with better comments and cleaner formatting. Think of it like the Director's cut: same script, tighter execution. By iterating the same formula, I solidified my understanding of user-driven input design and streamlined arithmetic logic while playing with humor and interactivity.</p>
-            <p>This project also reminds me that coding is a muscle - the more you train it, the better your insticts become.</p>
-            <p>Technologies used: Python, CLI, Exception Handeling, User Interaction.</p>
-        </details>
-      </div>
-    </section>
-
-      <section>
-        <h2>About Me</h2>
-          <p>Litigation attorney with a brain wired for logic and creativity. Currently levelling up my coding skills while designing a self-sustaining future on my own terms.</p>
-      </section>
-
-      <footer>
-        <p>Connect with me:
-          <a href="https://www.linkedin.com/in/johandria-joy-heyman-3455b6151/">LinkedIn</a>
-          <a href="https://github.com/Hey50Joy">GitHub</a>
-        </p>
-      </footer>
-  </body>
+    <footer>
+        <div class="footer-content">
+           <h3>Let's Build Something Awesome Together</h3>
+           <p>If you're vibing with my journey or want to work with me - Let's talk!</p>
+           <a href="contact.html" class="cta-button">Contact Me</a>
+        </div>
+    </footer>
+ </body>
 </html>
