--- a/about.html
+++ b/about.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Joy | Future Software Dev</title>
-    <link rel="stylesheet" href="style.css">
+    <title>About Me</title>
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   </head>
   <body>
 
     <!-- HEADER -->
     <header>
-      <h1 class="logo">Joy</h1>
+      <h1 class="logo">About Me</h1>
       <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
