fix: typo and syntex in html files

--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
 
       <section>
         <h2>About Me</h2>
-          <p>I am a litigating attorney who realized early on that litigation is not where my passions lie - because let's face it, life is too short to do anything else. I've always been passionate about creating and building my ideas, seeing them take shape and come to life before my eyes. It's that magic moment when something abstract turns into something real, and it's one of the most fulfilling feeling i've ever experienced.</p>
-          <p>Creativity runs through my veins. I love letting my mind wander, thinking outside the box - bcause, honestly, who wants to ive in a box? My goal is to be free to explore my ideas, design them, and watch them come to life. Coding has become the perfect outlet for this passion. It's a field that allows me to do all that and more, and I'm beyond excited about the future it holds for me.</p>
+          <p>I am a litigating attorney who realized early on that litigation is not where my passions lie - because let's face it, life is too short to do anything else. I've always been passionate about creating and building my ideas, seeing them take shape and come to life before my eyes. It's that magic moment when something abstract turns into something real, and it's one of the most fulfilling feelings I've ever experienced.</p>
+          <p>Creativity runs through my veins. I love letting my mind wander, thinking outside the box - because, honestly, who wants to live in a box? My goal is to be free to explore my ideas, design them, and watch them come to life. Coding has become the perfect outlet for this passion. It's a field that allows me to do all that and more, and I'm beyond excited about the future it holds for me.</p>
           <p>As I transition from law to sofware development, I'm ready to embrace every challenge and opportunity that comes my way. This journey is not just about building software - it's about creating something that makes a difference, something that reflects my passion for innovation and creativity.</p>
       </section>
 
