--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
     <main>
      <section class="blog-post">
         <h2>"The Beginning of a New Journey" - April 6, 2025</h2>
-         <p>During July 2023, i realized I was living a life that didn't bring me joy - constantly running, never knowing where to. So I left it all behind and began a journey to find what truly excites me.</p>
+         <p>During July 2023, I realized I was living a life that didn't bring me joy - constantly running, never knowing where to. So I left it all behind and began a journey to find what truly excites me.</p>
          <p>Over the next year, I explored everthing from plants and their uses to the depths of psychology. And in that process, I discovered something life-changing: I have undiagnosed ADHD and Autism.</p>
          <p>Suddenly, so many things made sense.</p>
          <p>During that time, I also stumbled upon coding - and fell in love with it. My brain sees the world in visuals and patterns, and coding lit up that part of me like nothing else. I've always loved puzzles, solving problems, and uncovering how things work - and here was a whole world built on that.</p>
