--- a/contact.html
+++ b/contact.html
@@ -29,9 +29,9 @@
             <p>If you'd like to reach out, collaborate, or just say hi - here's where to find me:</p>
 
         <ul>
-            <li>Email:<a href="mailto:hey.joy50@gmail.com>hey.joy50@gmail.com></a></li>
-            <li>GitHub:<a href="https://github.com/Hey50Joy">GitHub target='_blank">github.com/Hey50Joy</a></li>
-            <li>LinkedIn:<a href="https://www.linkedin.com/in/codingwithjoy/" target="_blank">linkedin.com/in/codingwithjoy/</a>
+            <li>Email: <a href="mailto:hey.joy50@gmail.com">hey.joy50@gmail.com></a></li>
+            <li>GitHub: <a href="https://github.com/Hey50Joy" target="_blank">github.com/Hey50Joy</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/codingwithjoy/" target="_blank">linkedin.com/in/codingwithjoy/</a>
         </ul>
     </section>
     <footer>
