--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- HERO SECTION -->
     <section class="hero">
         <h2>Hi, I'm Joy</h2>
-        <p>From litigation to creation - Welcome to my evolution from courtroom to code</p>
+        <p>From litigation to creation - Welcome to my evolution from courtroom to code.</p>
     </section>
 
     <!-- MISSION -->
@@ -40,7 +40,7 @@
     <section>
       <h2>Projects overview</h2>
       <ul>
-        <li><a href="https://github.com/Hey50Joy/Simple-calculator-1">Simple Calculator V.1</a> - My firs attempt at arithmetic logic using Python basics.</li>
+        <li><a href="https://github.com/Hey50Joy/Simple-calculator-1">Simple Calculator V.1</a> - My first attempt at arithmetic logic using Python basics.</li>
         <li><a href="https://github.com/Hey50Joy/Simple_Calculator_2">Simple Calculator V.2</a> - Cleaner, more efficient version of my original calculator.</li>
         <li><a href="https://github.com/Hey50Joy/Quite-plan-calculator">Quite Plan Calculator App</a> - Simple budgeting tool using a 5-input formula</li>
         <li><a href="https://github.com/Hey50Joy/Magic-8-Ball-1">Magic 8-Ball V.1</a> - A Fun python toy that randomly answers your yes/ no questions.</li>
