--- a/projects.html
+++ b/projects.html
@@ -28,9 +28,13 @@
         <!-- Projects will be inserted here by JS -->
     </main>
 
-      <footer>
-        <p>&copy; 2025 Joy's Portfolio</p>
-      </footer>
+    <footer>
+      <div class="footer-content">
+         <h3>Let's Build Something Awesome Together</h3>
+         <p>If you're vibing with my journey or want to work with me - Let's talk!</p>
+         <a href="contact.html" class="cta-button">Contact Me</a>
+      </div>
+    </footer>
 
       <script src="script.js"></script>
     </body>
