change css style sheet

--- a/index.html
+++ b/index.html
@@ -8,27 +8,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   </head>
   <body>
+    <nav>
+      <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
 
-    <!-- HEADER -->
-    <header>
-      <h1 class="logo">Joy</h1>
-      <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-
-    <!-- HERO SECTION -->
-    <section class="hero">
-        <h2>Hi, I'm Joy</h2>
+    <div class="hero">
+        <h1>Hi, I'm Joy</h1>
         <p>From litigation to creation - Welcome to my evolution from courtroom to code.</p>
-    </section>
+    </div>
 
     <!-- MISSION -->
     <section>
@@ -48,12 +42,10 @@
       </ul>
     </section>
 
-    <footer>
-        <div class="footer-content">
-           <h3>Let's Build Something Awesome Together</h3>
-           <p>If you're vibing with my journey or want to work with me - Let's talk!</p>
-           <a href="contact.html" class="cta-button">Contact Me</a>
-        </div>
+    <footer class="cta">
+      <h2>Let's Build Something Awesome Together</h3>
+      <p>If you're vibing with my journey or want to work with me - Let's talk!</p>
+        <a class="button" href="contact.html" class="cta-button">Contact Me</a>
     </footer>
  </body>
 </html>
