fix: changed css styling

--- a/about.html
+++ b/about.html
@@ -8,35 +8,40 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   </head>
   <body>
-
-    <!-- HEADER -->
-    <header>
-      <h1 class="logo">About Me</h1>
-      <nav>
+    <nav>
+      <div class="container">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
-      </nav>
-    </header>
-
+      </div>
+    </nav>
+  
+    <div class="hero">
+      <div class="container">
+        <h1>About Me</h1>
+        <p>Curious about how a lawyer became a coder?</p>
+      </div>
+    </div>
+  
+    <div class="container">
       <section>
-        <h2>About Me</h2>
-          <p>I am a litigating attorney who realized early on that litigation is not where my passions lie - because let's face it, life is too short to do anything else. I've always been passionate about creating and building my ideas, seeing them take shape and come to life before my eyes. It's that magic moment when something abstract turns into something real, and it's one of the most fulfilling feelings I've ever experienced.</p>
-          <p>Creativity runs through my veins. I love letting my mind wander, thinking outside the box - because, honestly, who wants to live in a box? My goal is to be free to explore my ideas, design them, and watch them come to life. Coding has become the perfect outlet for this passion. It's a field that allows me to do all that and more, and I'm beyond excited about the future it holds for me.</p>
-          <p>As I transition from law to sofware development, I'm ready to embrace every challenge and opportunity that comes my way. This journey is not just about building software - it's about creating something that makes a difference, something that reflects my passion for innovation and creativity.</p>
+        <p>I am a litigating attorney who realized early on that litigation is not where my passions lie - because let's face it, life is too short to do anything else. I've always been passionate about creating and building my ideas, seeing them take shape and come to life before my eyes. It's that magic moment when something abstract turns into something real, and it's one of the most fulfilling feelings I've ever experienced.</p>
+        <p>Creativity runs through my veins. I love letting my mind wander, thinking outside the box - because, honestly, who wants to live in a box? My goal is to be free to explore my ideas, design them, and watch them come to life. Coding has become the perfect outlet for this passion. It's a field that allows me to do all that and more, and I'm beyond excited about the future it holds for me.</p>
+        <p>As I transition from law to sofware development, I'm ready to embrace every challenge and opportunity that comes my way. This journey is not just about building software - it's about creating something that makes a difference, something that reflects my passion for innovation and creativity.</p>
       </section>
-
-      <footer>
-        <div class="footer-content">
-           <h3>Let's Build Something Awesome Together</h3>
-           <p>If you're vibing with my journey or want to work with me - Let's talk!</p>
-           <a href="contact.html" class="cta-button">Contact Me</a>
-        </div>
-      </footer>
-    </body>
+    </div>
+  
+    <footer class="cta">
+      <div class="container">
+        <h2>Let's Build Something Awesome Together</h3>
+          <p>If you're vibing with my journey or want to work with me - Let's talk!</p>
+          <a class="button" href="contact.html" class="cta-button">Contact Me</a>
+      </div>
+    </footer>
+  </body>
 </html>
