--- a/projects.html
+++ b/projects.html
@@ -7,35 +7,35 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   </head>
-
   <body>
-    <!-- HEADER -->
-    <header>
-      <h1 class="logo">My Projects</h1>
+    <div class="container">
       <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-    </header>
-
-    <main id="projects-container">
-        <!-- Projects will be inserted here by JS -->
-    </main>
-
-    <footer>
-      <div class="footer-content">
-         <h3>Let's Build Something Awesome Together</h3>
-         <p>If you're vibing with my journey or want to work with me - Let's talk!</p>
-         <a href="contact.html" class="cta-button">Contact Me</a>
+  
+      <div class="hero">
+        <h1>My Projects</h1>
+          <p>Look at everything I've built...so far.</p>
       </div>
-    </footer>
-
+  
+      <main id="projects-container">
+          <!-- Projects will be inserted here by JS -->
+      </main>
+  
+      <footer class="cta">
+        <h2>Let's Build Something Awesome Together</h3>
+          <p>If you're vibing with my journey or want to work with me - Let's talk!</p>
+          <a class="button" href="contact.html" class="cta-button">Contact Me</a>
+      </footer>
+      
       <script src="script.js"></script>
-    </body>
+    </div> 
+  </body>
 </html>
