--- a/blog.html
+++ b/blog.html
@@ -8,40 +8,46 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   </head>
   <body>
-
-    <!-- HEADER -->
-    <header>
-      <h1 class="logo">My Blog</h1>
-      <nav>
+    <nav>
+      <div class="container">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
-      </nav>
-    </header>
-
-    <main>
-     <section class="blog-post">
-        <h2>"The Beginning of a New Journey" - April 6, 2025</h2>
-         <p>During July 2023, I realized I was living a life that didn't bring me joy - constantly running, never knowing where to. So I left it all behind and began a journey to find what truly excites me.</p>
-         <p>Over the next year, I explored everthing from plants and their uses to the depths of psychology. And in that process, I discovered something life-changing: I have undiagnosed ADHD and Autism.</p>
-         <p>Suddenly, so many things made sense.</p>
-         <p>During that time, I also stumbled upon coding - and fell in love with it. My brain sees the world in visuals and patterns, and coding lit up that part of me like nothing else. I've always loved puzzles, solving problems, and uncovering how things work - and here was a whole world built on that.</p>
-         <p>This is where I found my niche...my future.</p>
-         <p>That moment marked the end of one journey - and the beginning of a brand new one.</p>
-     </section>
-    </main>
-
-      <footer>
-        <div class="footer-content">
-           <h3>Let's Build Something Awesome Together</h3>
-           <p>If you're vibing with my journey or want to work with me - Let's talk!</p>
-           <a href="contact.html" class="cta-button">Contact Me</a>
-        </div>
-      </footer>
-    </body>
+      </div>
+    </nav>
+  
+    <div class="hero">
+      <div class="container">
+        <h1>My Blog</h1>
+        <p>Raw thoughts. Real growth. My dev journey, unfiltered.</p>
+      </div>  
+    </div>
+  
+    <div class="container">
+      <main>
+        <section class="blog-post">
+          <h2>"The Beginning of a New Journey" - April 6, 2025</h2>
+            <p>During July 2023, I realized I was living a life that didn't bring me joy - constantly running, never knowing where to. So I left it all behind and began a journey to find what truly excites me.</p>
+            <p>Over the next year, I explored everthing from plants and their uses to the depths of psychology. And in that process, I discovered something life-changing: I have undiagnosed ADHD and Autism.</p>
+            <p>Suddenly, so many things made sense.</p>
+            <p>During that time, I also stumbled upon coding - and fell in love with it. My brain sees the world in visuals and patterns, and coding lit up that part of me like nothing else. I've always loved puzzles, solving problems, and uncovering how things work - and here was a whole world built on that.</p>
+            <p>This is where I found my niche...my future.</p>
+            <p>That moment marked the end of one journey - and the beginning of a brand new one.</p>
+        </section>
+      </main>
+    </div>
+  
+    <footer class="cta">
+      <div class="container">
+        <h2>Let's Build Something Awesome Together</h2>
+        <p>If you're vibing with my journey or want to work with me - Let's talk!</p>
+        <a class="button" href="contact.html" class="cta-button">Contact Me</a>
+      </div>
+    </footer>
+  </body>
 </html>
