--- a/contact.html
+++ b/contact.html
@@ -8,34 +8,42 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   </head>
   <body>
-
-    <!-- HEADER -->
-    <header>
-      <h1 class="logo">Contact Me</h1>
-      <nav>
+    <nav>
+      <div class="container">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
-      </nav>
-    </header>
-
-    <section id="contact">
+      </div>
+    </nav>
+  
+    <div class="hero">
+      <div class="container">
+        <h1>Contact Me</h1>
+        <p>Got a project, question, or crazy idea? Let's talk.</p>
+      </div>    
+    </div>
+  
+    <div class="container">
+      <section id="contact">
         <h2>Let's Connect</h2>
-            <p>If you'd like to reach out, collaborate, or just say hi - here's where to find me:</p>
-
-        <ul>
+          <p>If you'd like to reach out, collaborate, or just say hi - here's where to find me:</p>
+          <ul>
             <li>Email: <a href="mailto:hey.joy50@gmail.com">hey.joy50@gmail.com></a></li>
             <li>GitHub: <a href="https://github.com/Hey50Joy" target="_blank">github.com/Hey50Joy</a></li>
             <li>LinkedIn: <a href="https://www.linkedin.com/in/codingwithjoy/" target="_blank">linkedin.com/in/codingwithjoy/</a>
-        </ul>
-    </section>
+          </ul>
+      </section>
+    </div>
+      
     <footer>
+      <div class="container">
         <p>&copy; 2025 Joy's Portfolio</p>
+      </div>
     </footer>
- </body>
+  </body>
 </html>
