--- a/skills.html
+++ b/skills.html
@@ -7,72 +7,74 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   </head>
-  <body>
 
-    <!-- HEADER -->
-    <header>
-      <h1 class="logo">My Skills</h1>
+  <body>
+    <div class="container">
       <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="skills.html">Skills</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-    </header>
-
-    <!-- Skills Section -->
-    <section class="skills-section">
-        <h2>My Skills</h2>
-
-        <!-- Legal Skills -->
-         <div class="skills-category">
-            <h3>Legal Expertise</h3>
-            <ul>
-                <li>Legal Research & Analysis</li>
-                <li>Litigation & Courtroom experience</li>
-                <li>Contract Law & Drafting</li>
-                <li>Client Communication & Representation</li>
-                <li>Dispute Resolution</li>
-            </ul>
-         </div>
-
-         <!-- Software Development Skills -->
-          <div class="skills-category">
-            <h3>Software Development</h3>
-            <ul>
-                <li>Python</li>
-                <li>HTML & CSS</li>
-                <li>JavaScript</li>
-                <li>Git & GitHub</li>
-                <li>Responsive Web Design</li>
-                <li>Version Control & Collaboration Tools</li>
-                <li>Problem-Solving & Algorithmic Thinking</li>
-            </ul>
-            </div>
-
-        <!-- Soft Skills -->
-         <div class="skills-category">
-            <h3>Soft Skills</h3>
-            <ul>
-                <li>Creative Problem Solving</li>
-                <li>Adaptability</li>
-                <li>Time Management</li>
-                <li>Collaboration & Teamwork</li>
-                <li>Strong Communication Skills</li>
-            </ul>
-         </div>
-    </section>
-
-    <footer>
-        <div class="footer-content">
-           <h3>Let's Build Something Awesome Together</h3>
-           <p>If you're vibing with my journey or want to work with me - Let's talk!</p>
-           <a href="contact.html" class="cta-button">Contact Me</a>
-        </div>
-      </footer>
-    </body>
+    </div>
+      
+    <div class="hero">
+      <div class="container">
+        <h1>My Skills</h1>
+        <p>From courtroom arguments to code logic - here's my skill stack.</p>
+      </div>    
+    </div>
+  
+    <div class="container">
+      <!-- Legal Skills -->
+      <div class="skills-category">
+        <h2>Legal Expertise</h2>
+          <ul>
+            <li>Legal Research & Analysis</li>
+            <li>Litigation & Courtroom experience</li>
+            <li>Contract Law & Drafting</li>
+            <li>Client Communication & Representation</li>
+            <li>Dispute Resolution</li>
+          </ul>
+      </div>
+  
+      <!-- Software Development Skills -->
+      <div class="skills-category">
+        <h2>Software Development</h2>
+          <ul>
+              <li>Python</li>
+              <li>HTML & CSS</li>
+              <li>JavaScript</li>
+              <li>Git & GitHub</li>
+              <li>Responsive Web Design</li>
+              <li>Version Control & Collaboration Tools</li>
+              <li>Problem-Solving & Algorithmic Thinking</li>
+          </ul>
+      </div>
+  
+      <!-- Soft Skills -->
+      <div class="skills-category">
+        <h2>Soft Skills</h2>
+          <ul>
+            <li>Creative Problem Solving</li>
+            <li>Adaptability</li>
+            <li>Time Management</li>
+            <li>Collaboration & Teamwork</li>
+            <li>Strong Communication Skills</li>
+          </ul>
+      </div>
+    </div>
+      
+    <footer class="cta">
+      <div class="container">
+        <h2>Let's Build Something Awesome Together</h3>
+          <p>If you're vibing with my journey or want to work with me - Let's talk!</p>
+          <a class="button" href="contact.html" class="cta-button">Contact Me</a>
+      </div>  
+    </footer>
+  </body>
 </html>
