fix: styling issues with nav bar

--- a/projects.html
+++ b/projects.html
@@ -7,35 +7,43 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   </head>
+
   <body>
-    <div class="container">
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="skills.html">Skills</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-  
-      <div class="hero">
-        <h1>My Projects</h1>
-          <p>Look at everything I've built...so far.</p>
+    <body>
+      <div class="container">
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
       </div>
   
-      <main id="projects-container">
-          <!-- Projects will be inserted here by JS -->
-      </main>
+    <div class="hero">
+      <div class="container">
+        <h1>My Projects</h1>
+        <p>Look at everything I've built...so far.</p>
+      </div>  
+    </div>
   
-      <footer class="cta">
+    <div class="container">
+      <main id="projects-container">
+        <!-- Projects will be inserted here by JS -->
+      </main>
+    </div>
+      
+    <footer class="cta">
+      <div class="container">
         <h2>Let's Build Something Awesome Together</h3>
           <p>If you're vibing with my journey or want to work with me - Let's talk!</p>
           <a class="button" href="contact.html" class="cta-button">Contact Me</a>
-      </footer>
+      </div>  
+    </footer>
       
-      <script src="script.js"></script>
-    </div> 
+    <script src="script.js"></script> 
   </body>
 </html>
