Added: Blog post

--- a/blog.html
+++ b/blog.html
@@ -40,6 +40,16 @@
             <p>This is where I found my niche...my future.</p>
             <p>That moment marked the end of one journey - and the beginning of a brand new one.</p>
         </section>
+
+        <section class="blog-post">
+          <h2>"The Climb Between the Breakthroughs" - April 20, 2025</h2>
+            <p>I'm not going to sit here and pretend this journey has been easy.</p>
+            <p>There have been high days - days where I felt unstoppable, like I could conquer anything. But there were also the low ones. The ones where I felt like I'd made the biggest mistake of my life. Days where I questioned everything. Where I felt like life's greatest failure.</p>
+            <p>But here's the part that matters: I NEVER GAVE UP!</p>
+            <p>I pushed through the overwhelm, the doubt, the exhaustion. I've learned and grown more than I ever thought possible.</p>
+            <p>Take Git and Github, for example - when I first started, it felt like trying to read hieroglyphs on a spaceship. I was lost. But now? I can almost do it with my eyes closed. (Almost.😂)</p>
+            <p>And coding? It's been wild. Writing lines of code and seeing them come to life...it never gets old. Finding bugs, hunting down problems, and finally - finally - watching everything click into place. There's nothing quite like it.</p>
+            <p>Sure, I still have a lot to learn. But for the first time in a long time, I'm not afraid of the challenge - I'm exited by it.</p>
       </main>
     </div>
   
