--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Joy | Future Software Dev</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <img src="images/Top left corner 425.png" alt="Corner Flower" class="corner-flower top-left">
+    <img src="images/Bottom right corner 425.png" alt="Corner Flower" class="corner-flower bottom-right">
+    <img src="images/Joy.jpg" alt="Joy" class="joy-image">
   </head>
   
   <body>
@@ -24,6 +27,12 @@
       <div class="hero">
         <h1>Hi, I'm Joy</h1>
         <p>From litigation to creation - Welcome to my evolution from courtroom to code.</p>
+        
+        <!-- Personal Photo -->
+         <img src="images/joy.jpg" alt="Joy" class="joy-image">
+
+         <!--Decorative Flowers -->
+         <img src="images/Top left corner 425.png" alt="Corner Flower" class="corner-flower top-left">
       </div>
   
       <div class="container">
@@ -50,7 +59,8 @@
         <h2>Let's Build Something Awesome Together</h2>
           <p>If you're vibing with my journey or want to work with me - Let's talk!</p>
           <a class="button" href="contact.html" class="cta-button">Contact Me</a>
-      </footer>
+          <img src="images/Bottom right corner 425.png" alt="Corner Flower" class="corner-flower bottom-right">
+        </footer>
     </section>
   </body>
 </html>
