adjusting image sizes

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>From litigation to creation - Welcome to my evolution from courtroom to code.</p>
         
         <!-- Personal Photo -->
-         <img src="images/joy.jpg" alt="Joy" class="joy-image">
+         <img src="images/Joy.png" alt="Joy" class="joy-image">
 
          <!--Decorative Flowers -->
          <img src="images/Top left corner 425.png" alt="Corner Flower" class="corner-flower top-left">
