--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,10 @@
       <div class="container">
         <h1>Contact Me</h1>
         <p>Got a project, question, or crazy idea? Let's talk.</p>
+
+        <!--Decorative Flowers -->
+        <img src="images/Top left corner 425.png" alt="Corner Flower" class="corner-flower top-left">
+
       </div>    
     </div>
   
@@ -44,6 +48,7 @@
     <footer>
       <div class="container">
         <p>&copy; 2025 Joy's Portfolio</p>
+        <img src="images/Bottom right corner 425.png" alt="Corner Flower" class="corner-flower bottom-right">
       </div>
     </footer>
   </body>
