--- a/about.html
+++ b/about.html
@@ -26,6 +26,10 @@
       <div class="container">
         <h1>About Me</h1>
         <p>Curious about how a lawyer became a coder?</p>
+
+        <!--Decorative Flowers -->
+        <img src="images/Top left corner 425.png" alt="Corner Flower" class="corner-flower top-left">
+
       </div>
     </div>
   
@@ -42,6 +46,7 @@
         <h2>Let's Build Something Awesome Together</h3>
           <p>If you're vibing with my journey or want to work with me - Let's talk!</p>
           <a class="button" href="contact.html" class="cta-button">Contact Me</a>
+          <img src="images/Bottom right corner 425.png" alt="Corner Flower" class="corner-flower bottom-right">
       </div>
     </footer>
   </body>
