--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,10 @@
       <div class="container">
         <h1>My Projects</h1>
         <p>Look at everything I've built...so far.</p>
+
+        <!--Decorative Flowers -->
+        <img src="images/Top left corner 425.png" alt="Corner Flower" class="corner-flower top-left">
+
       </div>  
     </div>
   
@@ -41,6 +45,7 @@
         <h2>Let's Build Something Awesome Together</h3>
           <p>If you're vibing with my journey or want to work with me - Let's talk!</p>
           <a class="button" href="contact.html" class="cta-button">Contact Me</a>
+          <img src="images/Bottom right corner 425.png" alt="Corner Flower" class="corner-flower bottom-right">
       </div>  
     </footer>
       
