--- a/skills.html
+++ b/skills.html
@@ -26,6 +26,10 @@
       <div class="container">
         <h1>My Skills</h1>
         <p>From courtroom arguments to code logic - here's my skill stack.</p>
+
+        <!--Decorative Flowers -->
+        <img src="images/Top left corner 425.png" alt="Corner Flower" class="corner-flower top-left">
+
       </div>    
     </div>
   
@@ -74,6 +78,7 @@
         <h2>Let's Build Something Awesome Together</h3>
           <p>If you're vibing with my journey or want to work with me - Let's talk!</p>
           <a class="button" href="contact.html" class="cta-button">Contact Me</a>
+          <img src="images/Bottom right corner 425.png" alt="Corner Flower" class="corner-flower bottom-right">
       </div>  
     </footer>
   </body>
