--- a/contact.html
+++ b/contact.html
@@ -46,8 +46,10 @@
     </div>
       
     <footer>
-      <div class="container">
-        <p>&copy; 2025 Joy's Portfolio</p>
+      <div class="cta">
+        <h2>Let's Build Something Awesome Together</h2>
+          <p>If you're vibing with my journey or want to work with me - Let's talk!</p>
+          <p>&copy; 2025 Joy's Portfolio</p>
         <img src="images/Bottom right corner 425.png" alt="Corner Flower" class="corner-flower bottom-right">
       </div>
     </footer>
