changed contact details

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
       
         <section>
-          <h2>Projects overview</h2>
+          <h2>Projects Overview</h2>
             <ul>
               <li><a href="https://github.com/Hey50Joy/Simple-calculator-1">Simple Calculator V.1</a> - My first attempt at arithmetic logic using Python basics.</li>
               <li><a href="https://github.com/Hey50Joy/Simple_Calculator_2">Simple Calculator V.2</a> - Cleaner, more efficient version of my original calculator.</li>
