--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         <h2>Let's Connect</h2>
           <p>If you'd like to reach out, collaborate, or just say hi - here's where to find me:</p>
           <ul>
-            <li>Email: <a href="mailto:hey.joy50@gmail.com">hey.joy50@gmail.com></a></li>
+            <li>Email: <a href="mailto:codewithjoy.dev91@gmail.com">codewithjoy.dev91@gmail.com></a></li>
             <li>GitHub: <a href="https://github.com/Hey50Joy" target="_blank">github.com/Hey50Joy</a></li>
             <li>LinkedIn: <a href="https://www.linkedin.com/in/codingwithjoy/" target="_blank">linkedin.com/in/codingwithjoy/</a>
           </ul>
